# k2tools

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: check.yml
src/: kraken_output.rs  lib.rs  main.rs  progress.rs
src/commands/: command.rs  filter.rs  mod.rs  report_to_tsv.rs
src/report/: kraken_report.rs  mod.rs  rank.rs  row.rs
tests/: test_filter.rs  test_report_to_tsv.rs
